--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,8 @@
         .top-bg
           .wrapper-inside.clearfix
             %h1#logo
-              %a.ir{:href => "/"} Tealeaf Academy: An online school for developers
+              %a{:href => "/"} Flying Cakes
+              .sub The Cookery School
             %nav.nav
               %ul
                 %li
