Step 2. Create Credit Card Form

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -81,3 +81,7 @@
 .basic-grey .button:hover {
     background: #CF7A7A
 }
+
+.basic-grey input[type="radio"], .field.payment_method, fieldset.card_info {
+    margin: 20px;
+}
