Step 1. Modify our model to offer recurring courses

--- a/app/assets/stylesheets/front.css.sass
+++ b/app/assets/stylesheets/front.css.sass
@@ -589,13 +589,13 @@ h2, h3
   padding-top: 0
   .wrapper-inside
     text-align: center
+    border-left: 2px solid #0d5551
   .title
     margin-bottom: 0
   .course-nav-wrapper
     min-height: 127px
     background: #148780
     border-top: 2px solid #0d5551
-    border-bottom: 2px solid #0d5551
     ul
       margin: 0
       padding: 0
@@ -619,6 +619,7 @@ h2, h3
           text-decoration: none
           font-family: "myriad-pro",Arial,sans-serif
           font-size: 20px
+          border-bottom: 2px solid #0d5551
           &:hover
             background-color: #0d5551
             .course-arrow
