--- a/app/assets/stylesheets/front.css.sass
+++ b/app/assets/stylesheets/front.css.sass
@@ -589,6 +589,7 @@ h2, h3
   padding-top: 0
   .wrapper-inside
     text-align: center
+  .course-nav-wrapper .wrapper-inside
     border-left: 2px solid #0d5551
   .title
     margin-bottom: 0
